# libdect

./: .gitignore  INSTALL  Makefile.defs.in  Makefile.in  Makefile.rules.in  autogen.sh  configure.ac  libdect-0.0.1.pc.in
debian/: .gitignore  changelog  control  copyright  libdect-doc.install  libdect.install  rules
doc/: Doxyfile.in  Makefile.in
example/: .gitignore  Makefile.in  audio.c  cc.c  clms.c  common.c  common.h  debug.c  discover.c  dummy_ops.c  event_ops.c  fp-broadcast-page.c  fp-cc.c  fp-clms.c  fp-common.c  fp-locate-suggest.c  fp-mm.c  fp-siemens-proprietary.c  hijack.c  keys.c  mac.h  mm  mm-fp.c  mm-pp.c  mm.c  pp-access-rights-terminate.c  pp-access-rights.c  pp-auth.c  pp-cc.c  pp-clms.c  pp-common.c  pp-detach.c  pp-info-request.c  pp-list-access.c  pp-location-update.c  pp-wait-page.c  ss.c  test.c
include/: Makefile.in  b_fmt.h  cc.h  clms.h  coms.h  debug.h  file.h  identities.h  io.h  lce.h  libdect.h  list.h  mm.h  netlink.h  s_fmt.h  ss.h  timer.h  utils.h
include/dect/: auth.h  cc.h  clms.h  debug.h  identities.h  ie.h  keypad.h  lce.h  lia.h  libdect.h  llme.h  mm.h  raw.h  s_fmt.h  ss.h  terminal.h  timer.h  utils.h
include/linux/: socket.h
src/: .gitignore  Makefile.in  auth.c  backtrace.c  cc.c  clms.c  debug.c  dsaa.c  file.c  identities.c  ie.c  io.c  keypad.c  lce.c  libdect.c  mm.c  netlink.c  raw.c  s_msg.c  ss.c  timer.c  utils.c
src/ccitt-adpcm/: g711.c  g721.c  g72x.c  g72x.h
